--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -15,21 +15,20 @@ $indent-var: 0.7lem !default;
 /* system typefaces */
 $serif: Georgia, Times, serif !default;
 /* 2022.01.19 font change */
-$sans-serif: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', "Montserrat", "Pretendard", "Merriweather", sans-serif !default;
-$monospace: "Fira Mono", "Pretendard", Monaco, Consolas, "Lucida Console", monospace !default;
-
+$sans-serif: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Montserrat', 'Pretendard', 'Merriweather',
+    sans-serif !default;
+$monospace: 'Fira Mono', 'Pretendard', Monaco, Consolas, 'Lucida Console', monospace !default;
 
 /* sans serif typefaces */
 $sans-serif-narrow: $sans-serif !default;
-$helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif !default;
-$menufont: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', "Montserrat", "BioRhyme", "Pretendard", sans-serif !default;
-
+$helvetica: Helvetica, 'Helvetica Neue', Arial, sans-serif !default;
+$menufont: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Montserrat', 'BioRhyme', 'Pretendard', sans-serif !default;
 
 /* serif typefaces */
 $georgia: Georgia, serif !default;
 $times: Times, serif !default;
-$bodoni: "Bodoni MT", serif !default;
-$calisto: "Calisto MT", serif !default;
+$bodoni: 'Bodoni MT', serif !default;
+$calisto: 'Calisto MT', serif !default;
 $garamond: Garamond, serif !default;
 $lobster: 'Lobster', cursive !default;
 $biorhyme: 'BioRhyme', serif !default;
@@ -158,7 +157,7 @@ $max-width: $x-large !default;
    Grid
    ========================================================================== */
 
-$left-sidebar-width-narrow: 240px !default;
+$left-sidebar-width-narrow: 200px !default;
 $left-sidebar-width: 280px !default;
 $left-sidebar-width-wide: 400px !default;
 
