--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,10 +9,11 @@
                     ><img src="{{ logo_path | relative_url }}" alt="{{ site.masthead_title | default: site.title }}"
                 /></a>
                 {% endunless %}
-                <!-- <a class="site-title" href="{{ '/' | relative_url }}">
-          {{ site.masthead_title | default: site.title }}
-          {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
-        </a> -->
+                <a class="site-title" href="{{ '/' | relative_url }}">
+                    {{ site.masthead_title | default: site.title }} {% if site.subtitle %}<span class="site-subtitle"
+                        >{{ site.subtitle }}</span
+                    >{% endif %}
+                </a>
                 <ul class="visible-links">
                     {%- for link in site.data.navigation.main -%}
                     <li class="masthead__menu-item">
