--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -115,6 +115,16 @@
 /*
    Author profile and links
    ========================================================================== */
+.site-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: center;
+    align-self: center;
+    font-weight: bold;
+    font-size: 1.4rem;
+    font-style: italic;
+}
 
 .author__avatar {
     display: table-cell;
